--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,17 @@ set(STEAM_APP_ID 1122990)
 set(LPVPN_VERSION 0.1.1)
 set(LPVPN_WIN32_VERSION 0,1,1,0)
 
+if (NOT DEFINED GIT_EXECUTABLE)
+	set(GIT_EXECUTABLE "git")
+endif()
+
+execute_process(COMMAND
+	"${GIT_EXECUTABLE}" describe --match=NeVeRmAtCh --always --dirty
+	WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+	OUTPUT_VARIABLE LPVPN_GIT_VERSION
+	ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+
 include(FetchContent)
 if (CMAKE_VERSION VERSION_GREATER_EQUAL "3.24.0")
 	cmake_policy(SET CMP0135 NEW)
@@ -25,6 +36,7 @@ if (WIN32)
 	add_definitions(-DUNICODE)
 	add_definitions(-DLPVPN_VERSION="${LPVPN_VERSION}")
 	add_definitions(-DLPVPN_WIN32_VERSION=${LPVPN_WIN32_VERSION})
+	add_definitions(-DLPVPN_GIT_VERSION="${LPVPN_GIT_VERSION}")
 	set(CMAKE_SYSTEM_VERSION 6.1)
 endif()
 
